# SCG

./: .gitignore  CONTRIBUTING.md  Cargo.toml  IMPLEMENTATION_COMPLETE.md  LICENSE-APACHE  LICENSE-MIT  README.md  TECHNICAL_SUMMARY.md
.github/workflows/: ci.yml
examples/: complete_parsing.rs  disequality.rs  simple_parsing.rs
js-legacy-cooking-grammar/: 164feec9101a6a10@19855.js  212f9f2d725343b2@985.js  README.md  index.html  index.js  package.json
js-legacy-scg/: 9ab13ccf3341b8fb@20186.js  README.md  index.html  index.js  package.json
rust/: Cargo.toml  README.md
rust/scg-core/: Cargo.toml
rust/scg-core/src/: atoms.rs  binding.rs  builder.rs  grammar.rs  lib.rs  search.rs
rust/scg-core/tests/: integration_test.rs
rust/scg-tui/: Cargo.toml
rust/scg-tui/src/: main.rs  toy_grammar.rs
scg-cli/: Cargo.toml
scg-cli/src/: main.rs
scg-core/: Cargo.toml
scg-core/src/: binding.rs  construction.rs  kb.rs  lib.rs  precompute.rs  search.rs  triple.rs  util.rs  variable.rs
